<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanioImagen"
        android:layout_marginTop="@dimen/marginBase"
        android:src="@drawable/calculator"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/n1Label"
            android:textSize="@dimen/tamanioLetra"></TextView>

        <EditText
            android:id="@+id/n1Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/tamanioLetra"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/n2Label"
            android:textSize="@dimen/tamanioLetra"></TextView>

        <EditText
            android:id="@+id/n2Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/tamanioLetra"></EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase3"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanioBtn"
            android:layout_weight="1"
            android:onClick="sumar"
            android:background="@color/colorSuma"
            android:text="@string/sumarTxt"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/tamanioLetra"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanioBtn"
            android:layout_weight="1"
            android:onClick="restar"
            android:background="@color/colorResta"
            android:text="@string/restarTxt"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/tamanioLetra"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanioBtn"
            android:layout_weight="1"
            android:onClick="multiplicar"
            android:background="@color/colorMulti"
            android:text="@string/multiTxt"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/tamanioLetra"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanioBtn"
            android:layout_weight="1"
            android:onClick="dividir"
            android:background="@color/colorDiv"
            android:text="/"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/tamanioLetra"></Button>

    </LinearLayout>

</LinearLayout>
